--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,8 @@
-# Contributors to the repo
+# all individuals having contributed content to the repository
 
-Hamza Saidu <hamzasaidu346gmail.com>
-Lidya Amare Asfaw
+Author_1:
+Afolabi John Oluwaseun
+
+Author_2:
+Chinwe Chukwuogor
+
